# vllm_attn

./: .gitignore  README.md  colab_smoke_test.sh
block_ptr/: BLOCK_PTR_MIGRATION.md  README.md  ptr_vs_block_ptr_examples.ipynb
block_ptr/vllm_multiseq/: NOTES.md  pyproject.toml  qwen3_triton_attention.ipynb  triton_attention_backend.py  triton_attn.py
block_ptr/vllm_padded_decode/: NOTES.md  pyproject.toml  triton_attention_backend.py  triton_attn.py
block_ptr/vllm_paged/: NOTES.md  pyproject.toml  qwen3_triton_attention.ipynb  triton_attention_backend.py  triton_attn.py
block_ptr/vllm_split/: NOTES.md  pyproject.toml  qwen3_triton_attention.ipynb  triton_attn.py
block_ptr/vllm_split_v2/: NOTES.md  pyproject.toml  qwen3_triton_attention.ipynb  triton_attention_backend.py  triton_attn.py
block_ptr/vllm_unified/: NOTES.md  pyproject.toml  qwen3_triton_attention.ipynb  triton_attn.py
block_ptr/vllm_varlen/: NOTES.md  pyproject.toml  triton_attention_backend.py  triton_attn.py
ptr/vllm_multiseq/: NOTES.md
ptr/vllm_padded_decode/: NOTES.md  pyproject.toml  qwen3_triton_attention.ipynb  triton_attn.py
ptr/vllm_paged/: triton_attn.py
ptr/vllm_split/: triton_attention_backend.py
ptr/vllm_split_v2/: NOTES.md  pyproject.toml  qwen3_triton_attention.ipynb  triton_attention_backend.py  triton_attn.py
ptr/vllm_unified/: pyproject.toml  triton_attention_backend.py
ptr/vllm_varlen/: NOTES.md  qwen3_triton_attention.ipynb  triton_attn.py
vllm_multiseq/: pyproject.toml  triton_attn.py
vllm_paged/: NOTES.md  pyproject.toml
vllm_split/: NOTES.md  pyproject.toml  triton_attn.py
vllm_unified/: NOTES.md  triton_attn.py
vllm_varlen/: pyproject.toml
