[project]
name = "my-triton-backend"
version = "0.1.0"
description = "Minimal vLLM attention backend plugin using a custom Triton kernel (Qwen3-0.6B demo)"
requires-python = ">=3.10"
dependencies = [
    "vllm==0.19.1",
    "triton>=3.0",
    "torch",
]

[project.entry-points."vllm.general_plugins"]
my_triton_backend = "triton_attention_backend:register"

[tool.setuptools]
py-modules = ["triton_attn", "triton_attention_backend"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
