[project]
name = "my-varlen-backend"
version = "0.1.0"
description = "vLLM Triton attention plugin — unified kernel with seq-aligned flat grid + find_seq_idx (vLLM v1 kernel_unified_attention_2d style)"
requires-python = ">=3.10"
dependencies = [
    "vllm==0.19.1",
    "triton>=3.0",
    "torch",
]

[project.entry-points."vllm.general_plugins"]
my_varlen_backend = "triton_attention_backend:register"

[tool.setuptools]
py-modules = ["triton_attn", "triton_attention_backend"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
