[project]
name = "my-multiseq-backend-block"
version = "0.1.0"
description = "vLLM Triton attention plugin — multi-seq batch dispatch on top of paged kernels (block_ptr variant)"
requires-python = ">=3.10"
dependencies = [
    "vllm==0.19.1",
    "triton>=3.0",
    "torch",
]

[project.entry-points."vllm.general_plugins"]
my_multiseq_backend_block = "triton_attention_backend:register"

[tool.setuptools]
py-modules = ["triton_attn", "triton_attention_backend"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
