[project]
name = "my-padded-decode-backend-block"
version = "0.1.0"
description = "vLLM Triton attention plugin (single prefill kernel + q zero-pad decode) (block_ptr variant)"
requires-python = ">=3.10"
dependencies = [
    "vllm==0.19.1",
    "triton>=3.0",
    "torch",
]

[project.entry-points."vllm.general_plugins"]
my_padded_decode_backend_block = "triton_attention_backend:register"

[tool.setuptools]
py-modules = ["triton_attn", "triton_attention_backend"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
